--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,122 @@
-body {
+/*
+---- 01 TYPOGRAPHY SYSTEM
+    - FONT SIZE SYSTEM (px):
+    10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+    - FONT WEIGTHS:
+    - LINE HEIGTHS:
+            DEFAULT:1
+            1.05
+            1.6
+            
+---- 02 COLORS
+    text =  #ffffff
+    highlights= #c1b365
+---- 05 SHADOWS
+---- 06 BORDER-RADIUS
+default:9px
+medium: 11px
+---- 07 WHITESPACE
+    - SPACING SYSTEM (px):
+    2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128/ 160/ 224
+*/
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  overflow-y: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  /* 10px/16px = 0.625 = 62.5%*/
+  /* Porcentage of user's browser font-size setting */
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Orbitron", sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #ffffff;
+  background-image: url("./assets/home-background.png");
+  background-size: cover;
+
+  /*Only works if there is nothing absolutely positioned
+  in relation to body */
+  overflow-x: hidden;
+}
+
+.second-body {
+  background-image: url("./assets/general-background.png");
+  background-size: cover;
+}
+
+/**************************/
+/*GENERAL REUSABLE CODE*/
+/*****************************/
+
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+}
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+}
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
+.grid--center-v {
+  align-items: center;
+}
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+/****************************/
+/* HEADINGS STYLES*/
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
+  font-weight: 800;
+  color: #ffffff;
+  text-shadow: 0 4px 2px #f1f1f13f;
+  letter-spacing: -0.5px;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
+}
+.heading-secondary {
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+.heading-tertiary {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+.subheading {
+  display: block;
+  color: #cf711f;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
 }
